Adicionando o meu currículo

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </a>
           </div>
 
-          <button class="btn-cv">CV</button>
+          <button class="btn-cv" id="btn-cv">CV</button>
         </div>
 
 
