Adicionando o segundo projeto

--- a/index.html
+++ b/index.html
@@ -106,17 +106,16 @@
     </a>
 
 
-    <figure>
-      <img src="assets/img/img-projects/developing.png" alt="Developing" />
-      <figcaption>
-        <span>PROJETO EM DESENVOLVIMENTO</span>
-        <!--
-        <img src="assets/icons/languages/html.png" alt="HTML5" />
-        <img src="assets/icons/languages/css.png" alt="CSS3" />
-        <img src="assets/icons/languages/js.png" alt="JavaScript" />
-      </figcaption>
-      -->
-    </figure>
+    <a href="https://github.com/LuanMarques-Dev/ld-patins" target="_blank" style="text-decoration: none; color: inherit;">
+      <figure>
+        <img src="assets/img/img-projects/projects-02.png" alt="Patins" />
+        <figcaption>
+          <span>Desenvolvido com:</span>
+          <img src="assets/icons/languages/html.png" alt="HTML5" />
+          <img src="assets/icons/languages/css.png" alt="CSS3" />
+        </figcaption>
+      </figure>
+    </a>
 
     <figure>
       <img src="assets/img/img-projects/developing.png" alt="Developing" />
