--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
    </div>
   </nav>
 
-
-
-
   <section class="hero">
     <div class="hero-content">
       <div class="text">
@@ -206,5 +203,7 @@
   <script src="scripts/lang.js"></script>
   <script src="scripts/lang-switcher.js"></script>
 
+
+  teste
 </body>
 </html>
