--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   <h2 class="projects-title">Projetos</h2>
 
   <div class="projects-content">
-    <a href="https://github.com/LuanMarques-Dev/luan-ui" target="_blank" style="text-decoration: none; color: inherit;">
+    <a href="https://github.com/LuanMarques-Dev/hairday" target="_blank" style="text-decoration: none; color: inherit;">
       <figure>
         <img src="assets/img/img-projects/projects-01.png" alt="Projects 1" />
         <figcaption>
@@ -131,9 +131,21 @@
     </a>
 
 
-    <a href="https://github.com/LuanMarques-Dev/ld-patins" target="_blank" style="text-decoration: none; color: inherit;">
+    <a href="https://github.com/LuanMarques-Dev/luan-ui" target="_blank" style="text-decoration: none; color: inherit;">
       <figure>
         <img src="assets/img/img-projects/projects-02.png" alt="Patins" />
+        <figcaption>
+          <span>Desenvolvido com:</span>
+          <img src="assets/icons/languages/html.png" alt="HTML5" />
+          <img src="assets/icons/languages/css.png" alt="CSS3" />
+          <img src="assets/icons/languages/js.png" alt="JavaScript" />
+        </figcaption>
+      </figure>
+    </a>
+
+    <a href="https://github.com/LuanMarques-Dev/ld-patins" target="_blank" style="text-decoration: none; color: inherit;">
+      <figure>
+        <img src="assets/img/img-projects/projects-03.png" alt="Patins" />
         <figcaption>
           <span>Desenvolvido com:</span>
           <img src="assets/icons/languages/html.png" alt="HTML5" />
@@ -141,18 +153,6 @@
         </figcaption>
       </figure>
     </a>
-
-    <figure>
-      <img src="assets/img/img-projects/developing.png" alt="Developing" />
-      <figcaption>
-        <span>PROJETO EM DESENVOLVIMENTO</span>
-        <!--
-        <img src="assets/icons/languages/html.png" alt="HTML5" />
-        <img src="assets/icons/languages/css.png" alt="CSS3" />
-        <img src="assets/icons/languages/js.png" alt="JavaScript" />
-      </figcaption>
-      -->
-    </figure>
 
     <figure>
       <img src="assets/img/img-projects/developing.png" alt="Developing" />
